fixing classpath issues, within xalanj tests debug script